[Update] Holiday home  tour site Update

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -22,11 +22,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           <p align="left"><BR>
             <B><FONT size=3>The Designers<br>
             </FONT></B><FONT size=3><font size="2">The designers who are generously lending their time & talents to the tour:</font></FONT></p>
-          <p><em>Holiday Home</em><br>
-            Carol Shellenberger &amp; Mary Shaw<br>
-            4527 Harlin Drive Sacramento, CA 95826<br>
-            916.396.7576<br>
-            <a href="http://www.holidayhomedesigns.com" target="_blank">www.holidayhomesacramento.com</a></p>
+          
           <p><em>Haus Home Decor and Specialty Gift</em><br>
             Jonathan Marquardt and Don Garcia<br>
 			5601 H Street<br/>
@@ -45,20 +41,21 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
             Sacramento, CA 95816<br>
             916-457-2699<br>
             <a href="http://www.eastsacflorist.com" target="_blank">www.eastsacflorist.com</a></p>
-          <p><em>Impressions Designs</em><br>
-            Anne Evans<br>
-            2536 Exeter Square Lane <br>
-            Sacramento, CA 95825<br>
-			916-628-7002</p>
-          <p> <em>Inspired Interiors</em><br>
-            Tara Sorensen<br>
-            (707) 480-6837</p>
-		  <p>
 			<em>Beyond the Garden Gate</em><br/>
 			Pat Stromberg, Becky Heard and Nancy Storm<br/>
 			1015 Olive Drive, Davis, CA<br/>
 			530-756-6698
 		  </p>	
+		  <p>Jill Dudensing <br/>
+      606-9041<br/>
+      <a href="http://www.Jilldudensing.com">www.Jilldudensing.com</a>
+      </p>
+      <p>Gary T. Johns &amp; Assoc Interior Design<br/>
+      Gary Johns<br/>
+      3110 S Street<br/>
+      Sacramento, CA 95816<br/>
+      <a href="http://www.garyjohnsinteriordesign.com">www.garyjohnsinteriordesign.com</a>
+      </p>
           </blockquote>
         <P>&nbsp; 
           <!--End main content area -->
