--- a/public/shpsholidayhometour.com/tour.htm
+++ b/public/shpsholidayhometour.com/tour.htm
@@ -39,29 +39,10 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           <p align="left"><BR>
             <font size="3"><strong>The Holiday Home Tour of East Sacramento<br>
             </strong></font><font size="2">A Benefit for Sacred Heart Parish School</font></p>
-          <p>Take a self-guided walking tour of five magnificent homes in Sacramento’s 
-            Fabulous Forties, decorated for the holidays by top interior designers 
-            and florists. The tour takes about two hours from start to finish. 
-          </p>
-          <p>The Fabulous Forties East Sacramento is home to a neighborhood that 
-            is affectionately referred to as the &quot;Fabulous Forties.&quot; 
-            An area bound by J Street and Folsom Boulevard from 38th to 47th Streets, 
-            this historic neighborhood boasts wide avenues, sweeping green lawns 
-            and large, prewar (pre-WWI and pre-WWII) homes that have housed many 
-            of the city’s most prominent residents. </p>
-          <p>The neighborhood features grand old houses that were custom built 
-            in the early decades of the 20th century, when architects were looking 
-            to Europe for design inspiration. As a result, the Fabulous Forties 
-            is renowned for its eclectic &quot;Revival&quot; style architecture. 
-            Here you find a variety of dwellings: English cottages, Tudor-style 
-            homes, Dutch farmhouses, Mediterranean villas, and Craftsman bungalows. 
-            No two houses are the same. </p>
-          <p>Every year since 1973, residents of the Fabulous Forties have opened 
-            their homes to the public for the Holiday Home Tour, a self-guided 
-            walking tour that benefits Sacred Heart Parish School in East Sacramento. 
-            Thousands of visitors from throughout Northern California and Nevada 
-            and beyond come to see special homes and their architecture that create 
-            an extraordinary neighborhood. </p>
+          <p>Take a self-guided walking tour of five magnificent homes in Sacramento's Fabulous Forties neighborhood. These lovely homes have been decorated for the holidays by top area interior designers and florists. The tour takes approximately two hours from start to finish.</p>
+          <p>The tour takes place in a part of East Sacramento that is affectionately referred to as the "Fabulous Forties" - an area bound by J Street and Folsom Boulevard, and 38th to 47th Streets. This historic neighborhood boasts wide avenues, sweeping green lawns and picturesque, prewar (pre-WWII) homes that have housed many of the city's most prominent residents - Ronald and Nancy Reagan lived here during his term as Governor.</p>
+          <p>The neighborhood features houses that were custom built in the early decades of the 20th century, when architects were looking to Europe for design inspiration. As a result, the Fabulous Forties is known for its eclectic Revival style architecture which includes; English cottages, Tudor-style homes, Dutch farmhouses, Mediterranean villas, and Craftsman bungalows. No two houses are the same!</p>
+          <p>Every year since 1973, residents of the Fabulous Forties have opened their homes to the public for the Sacred Heart Parish School Holiday Home Tour. Proceeds from the tour help to offset tuition and offer assistance to those who might not otherwise be able to afford a Catholic education.</p>
         </blockquote>
         </TD>
     </TR></TBODY></TABLE></BODY></HTML>
