--- a/public/shpsholidayhometour.com/homes.htm
+++ b/public/shpsholidayhometour.com/homes.htm
@@ -11,8 +11,21 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
       <TD class=leftnavtext vAlign=top align=left width=160> 
         <!--Start left nav area -->
        <BR> 
-  		<br>	
-			<strong>2010 Homes</strong></p>
+  		<br>
+  		<p><strong>2011 Homes</strong></p>
+			<p align=left><img src="images/dot_red.JPG" width="9" height="8"> 
+	          <a href="homes11/home1.htm">40th Street</a></p>
+			<p align=left><img src="images/dot_red.JPG" width="9" height="8"> 
+	          <a href="homes11/home2.htm">42nd Street</a></p>
+			<p align=left><img src="images/dot_red.JPG" width="9" height="8"> 
+	          <a href="homes11/home3.htm" >44th Street</a></p>
+      <p align=left><img src="images/dot_red.JPG" width="9" height="8">
+        <a href="homes11/home4.htm" >45th Street</a></p>
+      <p align=left><img src="images/dot_red.JPG" width="9" height="8">
+        <a href="homes11/home5.htm" >46th Street</a></p>
+			<p align=left>&nbsp; </p>
+				
+			<p><strong>2010 Homes</strong></p>
 			<p align=left><img src="images/dot_red.JPG" width="9" height="8"> 
 	          <a href="homes10/home1.htm">The Classic Prairie</a></p>
 			<p align=left><img src="images/dot_red.JPG" width="9" height="8"> 
@@ -23,9 +36,9 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
         <a href="homes10/home4.htm" >The Craftsman Cottage </a></p>
       <p align=left><img src="images/dot_red.JPG" width="9" height="8">
         <a href="homes10/home5.htm" >The Quintessential Craftsman </a></p>
-			
-	<P align=left>&nbsp; </p>	
-        <strong>2009 Homes</strong></p> <P align=left><img src="images/dot_red.JPG" width="9" height="8"> 
+			<p align=left>&nbsp; </p>
+	      <p><strong>2009 Homes</strong></p> 
+        <p align=left><img src="images/dot_red.JPG" width="9" height="8"> 
           <a href="homes09/38thstreet.htm">English Cottage</a></p> 
         <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="homes09/40thstreet.htm"> 
           Classic European Revival</a></p> 
@@ -35,18 +48,8 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           Bungalow </a></p> 
         <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="homes09/45thstreet.htm"> 
           French Eclectic</a></p> 
-        <P align=left>&nbsp; </p>
-        <p><strong>2008 Homes</strong></p>
-        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="#">Craftsman 
-          Bungalow</a></p>
-        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="#">Comfortable 
-          Contempory</a></p>
-        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="#">European 
-          Revival</a></p>
-        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="#">Federalist 
-          Colonial</a></p>
-        <P align=left><img src="images/dot_red.JPG" width="9" height="8"> <a href="#">Spanish 
-          Eclectic</a></p>
+        <p align=left>&nbsp; </p>
+        
         <P align=center>&nbsp;</p></TD>
       <TD class=bodytext vAlign=top width=594>
         <!--Start main content area -->
@@ -56,9 +59,9 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
             <B><FONT size=3>Holiday Home Tour </FONT></B></p>
 			<table cellspacing="0" cellpadding="0" border="0" width="485" class="sponsors">
 				<tr>
-					<td width="230"><a href="homes10/home1.htm"><img src="images/brown-home-sml.jpg" alt="The Classic Prairie" title="The Classic Prairie"/></a></td>
+					<td width="230"><a href="homes11/home1.htm"><img src="homes11/images/40th-streets.jpg" alt="40th Street " title="40th Street"/></a></td>
 					<td width="25">&nbsp;</td>
-					<td width="230"><a href="homes10/home2.htm"><img src="images/kawamaura-home-sml.jpg" alt="The Colonial Revival" title="The Colonial Revival"/></td>
+					<td width="230"><a href="homes11/home2.htm"><img src="homes11/images/42nd-streets.jpg" alt="42nd Street" title="42nd Street"/></td>
 				</tr>
 				<tr>
 					<td>&nbsp;</td>
@@ -66,9 +69,9 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
-					<td ><a href="homes10/home3.htm"><img src="images/katchis_home-sml.jpg" alt="The Contemporary Cottage" title="The Contemporary Cottage" /></a></td>
+					<td ><a href="homes11/home3.htm"><img src="homes11/images/44th-streets.jpg" alt="44th Street" title="44th Street" /></a></td>
 					<td>&nbsp;</td>
-					<td ><a href="homes10/home4.htm"><img src="images/youker-home-sml.jpg" alt="The Craftsman Cottage" title="The Craftsman Cottage"/></a></td>
+					<td ><a href="homes11/home4.htm"><img src="homes11/images/45th-streets.jpg" alt="45th Street" title="45th Street"/></a></td>
 				</tr>
 				<tr>
 					<td>&nbsp;</td>
@@ -76,7 +79,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
-					<td ><a href="homes10/home5.htm"><img src="images/home5-sml.jpg" alt="The Quintessential Craftsman" title="The Quintessential Craftsman"/></a></td>
+					<td ><a href="homes11/home5.htm"><img src="homes11/images/46th-streets.jpg" alt="46th Street" title="46th Street"/></a></td>
 					<td>&nbsp;</td>
 					<td >&nbsp;</td>
 				</tr>
