--- a/public/index.html
+++ b/public/index.html
@@ -528,7 +528,7 @@
 			
 			<div class="col-299-r " >
 				<div class="box1">
-				  <img alt="" src="images/fall-festival.jpg" />
+				  <a href="images/70th_annual_fall_festival_updates.pdf" target="_blank"><img alt="" src="images/fall-festival.jpg" /></a>
 				</div>
 				<div class="box1"><img alt="" src="images/wcea-wasc-logo.jpg" /></div>
 			</div>
