--- a/public/about-us-4.html
+++ b/public/about-us-4.html
@@ -212,7 +212,7 @@
 					<tr>
 						<th >3rd grade</th>
 						<td>Miss Taricco</td>
-						<td>Teaching Asst:  Miss Manolakas</td>
+						<td>Teaching Asst:  Miss Manolakas<br/>3rd grade Aide: Mrs. Mazzaferro</td>
 					</tr>
 					<tr>
 						<th >4th grade</th>
@@ -277,7 +277,7 @@
 					<tr>
 						<th >Extended Care Director</th>
 						<td>Mrs. Boruff</td>
-						<td>Extension Aide: Ms.  Cebezas <br />Extension Aide:  Ms. Sanchez</td>
+						<td>Extension Aide: Mr. Werry<br />Extension Aide:  Ms. Sanchez</td>
 					</tr>
 					<tr>
 						<th >Plant Maintenance</th>
@@ -295,16 +295,16 @@
 				<h3>Quick Links</h3>
 				<div class="quick-link">
 					<ul  >
-                    	<li><a href="about-us-1.html">Mission Statement</a></li>
-                        <li><a href="about-us-2.html">School History</a></li>
-                        <li><a href="about-us-3.html">At A Glance</a></li>
+            <li><a href="about-us-1.html">Mission Statement</a></li>
+            <li><a href="about-us-2.html">School History</a></li>
+            <li><a href="about-us-3.html">At A Glance</a></li>
 						<li><a href="about-us-4.html">Faculty and Staff</a></li>
 						<li><a href="about-us-5.html">SLE - Kindergarten to 3rd Grade</a></li>
 						<li><a href="about-us-6.html">SLE - 4th to 8th Grade</a></li>
 						<li><a href="about-us-7.html">Uniform Policy</a></li>
 						<li><a href="about-us-8.html">Virtual Tour</a></li>
 						<li><a href="about-us-9.html">Employment</a></li>  	
-                    </ul>
+          </ul>
 				</div>	
 			</div>
 			<div class="sptr-1"></div>
