[Remove].pdf for Fall Festival

--- a/public/index.html
+++ b/public/index.html
@@ -558,7 +558,7 @@
 			
 			<div class="col-299-r " >
 				<div class="box1">
-				  <a href="images/FALL_FESTIVAL_2011_Schedule_write_up.pdf" target="_blank"><img alt="" src="images/fall-festival.jpg" /></a>
+				  <img alt="" src="images/fall-festival.jpg" /></a>
 				</div>
 				<div class="box1"><img alt="" src="images/wcea-wasc-logo.jpg" /></div>
 			</div>
