[Update] News Updated

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 <body>
   <!-- Overstat.com | begin Top-Part (v.2.0.1) ========================== --> 
   <script type="text/javascript">
-      var di = "{61734f567779476561777a646e70647933344a5453673d3d}"; var osCancel = false, osCancelTimer = 0;
+      var di = "61734f567779476561777a646e70647933344a5453673d3d"; var osCancel = false, osCancelTimer = 0;
       var osProto = "http" + (("https:" == document.location.protocol) ? "s://sslscript." : "://script.");
       try {document.write(unescape("%3Cscr" + "ipt src='" + osProto + "overstat.com/js/secure.top.js' type='text/javascript'%3E%3C/scr" + "ipt%3E"));}
       catch (Error) { if (document.body) {document.body.style.visibility = "visible";}}
@@ -298,8 +298,12 @@
               
               
 							<div class="news-data">
+							  <p><strong style="text-transform:uppercase;">Applications for School</strong></p>
+							  <p>Applications for the 2012/2013 school year will accepted starting October
+                3rd.</p>
+                <p>Applicants for kindergarten must be 5 years old by September 1st, 2012.</p>
                 <p><strong>FALL FESTIVAL is HERE!</strong></p>
-                <p>The 79th annual Sacred Heart Fall Festival is Saturday, October 1st.<br/>
+                <p>The 70th annual Sacred Heart Fall Festival is Saturday, October 1st.<br/>
                 Here is the schedule of events:</p><br/>
 			
 				<ul>
