UPDATE Home Tour Tickets page - formatting

--- a/public/shpsholidayhometour.com/tickets.htm
+++ b/public/shpsholidayhometour.com/tickets.htm
@@ -26,10 +26,11 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           <font size="3"><strong>Will Call</strong></font>
           <p><!--<a href="http://insightmethods.com/chintan/sacred_heart_landingpage/site/Index.html" title="Sacred Heart Holiday Home Tour" target="_blank">Online tickets</a> will be held at will-call for pick up on tour days.--> 
 	<p>
-		<strong>On Friday morning only, will-call will be located in the Mercy McMahon Terrace at 3865 J St.
+		On Friday morning only, will-call will be located in the Mercy McMahon Terrace at 3865 J St.
 		Will-call will move to Sacred Heart School, at 856 39th Street, at 12:30 pm on Friday.
 		Will-call will remain at the school through the weekend.
-		Will-call tickets will only be available for pick-up at the school.  They are not available for pick-up at any of the houses.</strong><br/>
+		Will-call tickets will only be available for pick-up at the school.  
+		<strong>They are not available for pick-up at any of the houses.</strong><br/>
 	</p>
             <!-- ================================ -->
             <!-- = <div class="datatable-divx">
@@ -54,8 +55,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 		<p>*Children over the age of 1 must have their own ticket. Organizers predict another sellout again this year and suggest advance purchases when possible.</p>
           <p><font size="3"><strong>To Purchase Tickets on the Day of the Tour
             </strong></font><br>
-            <br>
-            <strong>On tour days, tickets can be purchased at Sacred Heart School. Sacred Heart Parish School is located at 856 39th Street. Cash, check or credit cards are accepted. They may also be purchased at house #1 located on 46th Street.  Look for the signs!</strong></p>
+            <br>On tour days, tickets can be purchased at Sacred Heart School. The school is located at 856 39th Street. Cash, check or credit cards are accepted. They may also be purchased at house #1 located on 46th Street.  Look for the signs!</p>
           
           
           <br>
