[UPDATE] news formatting

--- a/public/index.html
+++ b/public/index.html
@@ -312,11 +312,9 @@
 								<p>Even if your child is doing well in all of his or her classes, you are still required to attend.  It is important for you and your child to hear the good news!</p><p></p>
 				<p><strong style="text-transform:uppercase;">Halloween Activities</strong></p>
 				<p>We will be celebrating Halloween a little early this year.  Halloween activities are scheduled for Friday, October 28.  Students are allowed to come to school in age-appropriate costumes on that day (see guidelines for themed free dress days in the family handbook).</p><p></p>
-				<p><strong style="text-transform:uppercase;">Slider Day for Lunch</strong></p>
-				<ul>
-					<p>Costume Parade – 1:30 in the school gym<br/>
-					   Class parties – 2:15 in the classrooms</p>
-				</ul>
+					<p>Slider Day for Lunch</p>
+					<p>Costume Parade – 1:30 in the school gym</p>
+					<p>Class parties – 2:15 in the classrooms</p>
                 
               </div>
 						</dd>
