[UPDATE] Home Tour site edits

--- a/public/shpsholidayhometour.com/main.html
+++ b/public/shpsholidayhometour.com/main.html
@@ -14,7 +14,8 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           <p><img src="images/logo-rich.png"  alt="" /></p> 
           <p><img src="images/logo-moranstanley.png"  alt="" /></p>
           <p><img src="images/wells.png"  alt="" /></p> 
-          <p><img src="images/eastsac.png"  alt=""></p>
+          <p><img src="images/eastsac.png"  alt="" /></p>
+          <p><img src="images/logo_laser2.png"alt="" /></p>
 		  	
           <BR>
           
