--- a/public/shpsholidayhometour.com/tickets.htm
+++ b/public/shpsholidayhometour.com/tickets.htm
@@ -11,18 +11,16 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
       <TD class=leftnavtext vAlign=top align=left width=165>
         <!--Start left nav area -->
         <BR> 
-  <br><font color="#990000" size="1"><strong>Holiday Home Tour Ticket Sales</strong></font></p>
-        <P align=left>Welcome to the Sacred Heart Holiday Home Tour ticket store. 
-		<p>Tickets will be available November 1st<br/> at the local retailer locations listed below and at the Sacred Heart School office.</p> 
-			<p>The school address is 856 39th Street, Sacramento, CA 05916.</p></P>
-	
+  <!--<br><font color="#990000" size="1"><strong>Holiday Home Tour Ticket Sales</strong></font></p>-->
 	  </TD>
       <TD class=bodytext vAlign=top width=589>
         <!--Start main content area -->
         <blockquote> 
           <p align="left"><BR>
             <B><FONT size=3>Holiday Home Tour Ticket Sales</FONT></B></p>
-          <p>Welcome to the Sacred Heart Holiday Home Tour ticket store.  <!--We are pleased to announce that we now offer a "surcharge free" <a href="http://insightmethods.com/chintan/sacred_heart_landingpage/site/Index.html" title="Sacred Heart Holiday Home Tour" target="_blank">transaction via PayPal.</a>-->  </p>
+          <p>Welcome to the Sacred Heart Holiday Home Tour ticket store.
+		  <p>Tickets will be available November 1st at the local retailer locations listed below and<br/> at the Sacred Heart School office. The school address is 856 39th Street, Sacramento, CA 05916.</p></P>
+		  <!--We are pleased to announce that we now offer a "surcharge free" <a href="http://insightmethods.com/chintan/sacred_heart_landingpage/site/Index.html" title="Sacred Heart Holiday Home Tour" target="_blank">transaction via PayPal.</a>-->  </p>
           <font size="3"><strong>Will Call</strong></font>
           <p><!--<a href="http://insightmethods.com/chintan/sacred_heart_landingpage/site/Index.html" title="Sacred Heart Holiday Home Tour" target="_blank">Online tickets</a> will be held at will-call for pick up on tour days.--> 
 	<p>
@@ -69,11 +67,11 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
             </tr>
             <tr> 
-              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">Collected Works<br>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif"><u>Collected Works</u><br>
                 4524 Freeport Blvd. <br>
                 916-737-8188</font></td>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
-              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">Pottery World<br>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif"><u>Pottery World</u><br>
                 4419 Granite Dr, Rocklin, CA <br>
                 916-624-8080</font></td>
             </tr>
@@ -83,11 +81,11 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
             </tr>
             <tr> 
-              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">Hoshall's Salon &amp; Spa<br>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif"><u>Hoshall's Salon &amp; Spa</u><br>
 	                  6608 Folsom-Auburn Blvd. #4 <br>
 	                  916-987-1995</font></td>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
-              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">Haus Home Decor and Specialty Gift<br>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif"><u>Haus Home Decor and Specialty Gift</u><br>
                 5601 H Street, Sacramento, CA <br>
                 916-448-4100 </font></td>
             </tr>
@@ -97,11 +95,11 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
             </tr>
             <tr> 
-              	<td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">East Sacramento Hardware<br>
+              	<td><font size="1" face="Verdana, Arial, Helvetica, sans-serif"><u>East Sacramento Hardware</u><br>
 	                  4800 Folsom Blvd.<br>
 	                  (916) 457-7558</font></td>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
-              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">East Sac Florist<br/>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif"><u>East Sac Florist</u><br/>
 					5379 H Street<br/>
 					916-457-2699
 	              </font>
@@ -115,7 +113,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
             <tr> 
               <td>
 				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
-					Beyond the Garden Gate<br/>
+					<u>Beyond the Garden Gate</u><br/>
           1015 Olive Drive, Davis, CA<br/>
           530-756-6698
           
@@ -124,7 +122,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
               <td>
 				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
-					Calico Corner<br/>
+					<u>Calico Corner</u><br/>
           5255 Sunrise Blvd, Fair Oaks, CA 95628<br/>
           916-962-0281
 				</font>
@@ -138,7 +136,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 			<tr> 
               <td>
 				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
-					Emigh Hardware<br/>
+				<u>Emigh Hardware</u><br/>
           3555 El Camino Ave, Sacramento, CA 95821-6597<br/>
           916-482-1900
 				</font>
@@ -146,7 +144,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
               <td>
 				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
-					Talini's Garden Center &amp; Nursery<br/>
+				<u>Talini's Garden Center &amp; Nursery</u><br/>
           5601 Folsom Blvd, Sacramento, CA 95819-4605<br/>
           916-451-8150
           
@@ -161,7 +159,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 			<tr> 
               <td>
 				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
-					Pink House<br/>
+				<u>Pink House</u><br/>
           1462 33rd St, Sacramento, CA 95816-5350<br/>
           916-737-7465
 				</font>
@@ -169,7 +167,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
               <td>
 				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
-					Emigh Casual Living<br/>
+				<u>Emigh Casual Living</u><br/>
           3535 El Camino Avenue, Sacramento CA 95821<br/>
           916-486-9500 
 				</font>
