[Update] Add Address and Sponsor logo

--- a/public/shpsholidayhometour.com/tickets.htm
+++ b/public/shpsholidayhometour.com/tickets.htm
@@ -156,28 +156,49 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
             </tr>
-			<tr> 
+            <tr> 
               <td>
-				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
-				<u>Pink House</u><br/>
-          1462 33rd St, Sacramento, CA 95816-5350<br/>
-          916-737-7465
-				</font>
-			  </td>
+                <font size="1" face="Verdana, Arial, Helvetica, sans-serif">
+                <u>Pink House</u><br/>
+                1462 33rd St, Sacramento, CA 95816-5350<br/>
+                916-737-7465
+                </font>
+              </td>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
               <td>
-				<font size="1" face="Verdana, Arial, Helvetica, sans-serif">
-				<u>Emigh Casual Living</u><br/>
-          3535 El Camino Avenue, Sacramento CA 95821<br/>
-          916-486-9500 
-				</font>
-			  </td>
+                <font size="1" face="Verdana, Arial, Helvetica, sans-serif">
+                <u>Emigh Casual Living</u><br/>
+                3535 El Camino Avenue, Sacramento CA 95821<br/>
+                916-486-9500 
+                </font>
+              </td>
             </tr>
-			<tr> 
+            <tr> 
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
             </tr>
+            <tr> 
+              <td>
+                <font size="1" face="Verdana, Arial, Helvetica, sans-serif">
+                <u>McCreery's Home Furnishings</u><br/>
+                3140 Auburn Blvd, Sacramento, CA 95824<br/>
+                916-487-2019
+                </font>
+              </td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td>
+                <font size="1" face="Verdana, Arial, Helvetica, sans-serif">
+                &nbsp;
+                </font>
+              </td>
+            </tr>
+            <tr> 
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+            </tr>
+            
 			
 			
           </table>
