--- a/public/shpsholidayhometour.com/sponsors.htm
+++ b/public/shpsholidayhometour.com/sponsors.htm
@@ -87,7 +87,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
         </tr>
 				<tr>
 					<td><img src="images/logos/logo_twiggs.png"/></td>
-					<td>&nbsp;</td>
+					<td><img src="images/logos/logo-woolford.png"/></td>
 				</tr>	
        
  
