[Update] Home tour site Update

--- a/public/shpsholidayhometour.com/tickets.htm
+++ b/public/shpsholidayhometour.com/tickets.htm
@@ -189,7 +189,31 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
               <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
               <td>
                 <font size="1" face="Verdana, Arial, Helvetica, sans-serif">
-                &nbsp;
+                <u>Mercedes of Sacramento</u><br/>
+                1810 Howe Ave,  Sacramento, CA 95825 <br/>
+                888-479-0451
+                </font>
+              </td>
+            </tr>
+            <tr> 
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+            </tr>
+            <tr> 
+              <td>
+                <font size="1" face="Verdana, Arial, Helvetica, sans-serif">
+                <u>Mercedes of Rocklin</u><br/>
+                4747 Granite Drive, Rocklin, CA 95677<br/>
+                888-479-0451 
+                </font>
+              </td>
+              <td><font size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font></td>
+              <td>
+                <font size="1" face="Verdana, Arial, Helvetica, sans-serif">
+                <u>Mercedes of El Dorado Hills</u><br/>
+                1000 Mercedes Lan,  El Dorado Hills, CA 95762 <br/>
+                888-773-3154
                 </font>
               </td>
             </tr>
