[Update] add 6th home

--- a/public/shpsholidayhometour.com/homes11/home6.htm
+++ b/public/shpsholidayhometour.com/homes11/home6.htm
@@ -17,17 +17,18 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
           <a href="home3.htm" >44th Street</a></p>
 		<p align=left><img src="../images/dot_red.JPG" width="9" height="8">
 		  <a href="home4.htm" >45th Street</a></p>
-    <p align=left><img src="../images/dot_green.JPG" width="9" height="8">
-      <a href="home5.htm" >46th Street</a></p>
     <p align=left><img src="../images/dot_red.JPG" width="9" height="8">
+      <a href="home5.htm" >46th Street</a></p>
+    <p align=left><img src="../images/dot_green.JPG" width="9" height="8">
       <a href="home6.htm" >6th Home</a></p>
+
       </TD>
       <TD class=bodytext vAlign=top width=594>
         <!--Start main content area -->
         <blockquote> 
           <p align="left"><BR>
-            <B><FONT size=3>46th Street</FONT></B></p>
-          <p align="left"><img src="images/46th-street.jpg" alt="46th Street" title="46th Street"></p>
+            <B><FONT size=3>6th Home</FONT></B></p>
+          <p align="left"><img src="images/home-1-big.jpg" alt="6th Home" title="6th Home"></p>
           <p align="left">&nbsp;
           </p>
           </blockquote>
