--- a/public/shpsholidayhometour.com/index.htm
+++ b/public/shpsholidayhometour.com/index.htm
@@ -47,6 +47,7 @@ cellSpacing=0 cellPadding=0 width=800 align=center border=0>
     <img src="homes11/images/44th-streets.jpg" alt="44th Streets" width="230" height="180" />
     <img src="homes11/images/45th-streets.jpg" alt="45th Streets" width="230" height="180" />
     <img src="homes11/images/46th-streets.jpg" alt="46th Streets" width="230" height="180" />
+    <img src="homes11/images/home-1.jpg" alt="" width="230" height="180" />
   </div>
                   <MAP name=FPMap0>
                     <AREA shape=RECT target=iframe1 alt=Home 
