[Update] December Pulse.pdf [Edit] Designer info [Open] PayPal until midnight Dec.2

--- a/public/shpsholidayhometour.com/designers.htm
+++ b/public/shpsholidayhometour.com/designers.htm
@@ -24,7 +24,7 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
             </FONT></B><FONT size=3><font size="2">The designers who are generously lending their time & talents to the tour:</font></FONT></p>
           
           <p><em>Haus Home Decor and Specialty Gift</em><br>
-            Jonathan Marquardt and Don Garcia<br>
+            Jonathan Marquardt and Taige Clark<br>
 			5601 H Street<br/>
 			Sacramento, CA 95819<br/>
 			916-448-4100<br/>
