[Correct] Homes Page

--- a/public/shpsholidayhometour.com/homes.htm
+++ b/public/shpsholidayhometour.com/homes.htm
@@ -82,8 +82,8 @@ cellSpacing=0 cellPadding=4 width=770 border=0>
 				<tr>
 					<td ><a href="homes11/home5.htm"><img src="homes11/images/46th-streets.jpg" alt="46th Street" title="46th Street"/></a></td>
 					<td>&nbsp;</td>
-					<td ><em>Home images painted by Pat Illouli.</em><br/>
-						 <p><a href = "www.houseportraitsusa.com">www.houseportraitsusa.com</p></td>
+					<td ><p>Home images painted by Pat Illouli.</p>
+						 <p><a href = "www.houseportraitsusa.com">www.houseportraitsusa.com</a></p></td>
 				</tr>
 			</table>
           	
