[add] common tpl file in site

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
       <script src="http://commoncode.schoolyardapp.com/javascripts/sycontent.js" type="text/javascript"></script>
       <script type="text/javascript" charset="utf-8">
         $(document).ready(function(){
-        sycontent('http://commoncode.insightmethods.info/sites/4e2fd419b4dd800216000215/theme/javascripts/fromsy/commontpl.js',
+        sycontent('commontpl.js',
         [
         {
         content: 'group_forms',
