--- a/public/index.html
+++ b/public/index.html
@@ -97,10 +97,10 @@
 <body>
   <!-- Overstat.com | begin Top-Part (v.2.0.1) ========================== --> 
   <script type="text/javascript">
-      var di = "61734f567779476561777a646e70647933344a5453673d3d"; var osCancel = false, osCancelTimer = 0;
-      var osProto = "http" + (("https:" == document.location.protocol) ? "s://sslscript." : "://script.");
-      try {document.write(unescape("%3Cscr" + "ipt src='" + osProto + "overstat.com/js/secure.top.js' type='text/javascript'%3E%3C/scr" + "ipt%3E"));}
-      catch (Error) { if (document.body) {document.body.style.visibility = "visible";}}
+     // var di = "61734f567779476561777a646e70647933344a5453673d3d"; var osCancel = false, osCancelTimer = 0;
+      //var osProto = "http" + (("https:" == document.location.protocol) ? "s://sslscript." : "://script.");
+      //try {document.write(unescape("%3Cscr" + "ipt src='" + osProto + "overstat.com/js/secure.top.js' type='text/javascript'%3E%3C/scr" + "ipt%3E"));}
+      //catch (Error) { if (document.body) {document.body.style.visibility = "visible";}}
   </script>  
   <!-- Overstat.com | end Top-Part   (v.2.0.1) ========================== -->
 
