--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -9,7 +8,7 @@
 	<title>Welcome to Sacred Heart Parish School</title>
 	<link href="css/style.css" media="screen" rel="stylesheet" type="text/css" />
 	<!-- accordion Start -->
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui-1.8.4.custom.min.js"></script>
 	<script type="text/javascript">
 		$(function(){
@@ -50,13 +49,13 @@
 	<!-- Menu End -->
 	
 	<!-- FromeSy Start -->
-      <script src="http://commoncode.insightmethods.info/sites/4e2fd419b4dd800216000215/theme/javascripts/fromsy/handlebars.1.0.0.beta.3.js" type="text/javascript"></script>
+      <script src="//commoncode.insightmethods.info/sites/4e2fd419b4dd800216000215/theme/javascripts/fromsy/handlebars.1.0.0.beta.3.js" type="text/javascript"></script>
       
       <script type="text/javascript" charset="utf-8">
         //var SYURL = "https://ghanshyam.schoolyardapp.com"
-        var SYURL = "https://sacredheart-sac.schoolyardapp.com"
+        var SYURL = "//sacredheart-sac.schoolyardapp.com"
       </script>
-      <script src="http://commoncode.schoolyardapp.com/javascripts/sycontent.js" type="text/javascript"></script>
+      <script src="//commoncode.insightmethods.info/sites/4e2fd419b4dd800216000215/theme/javascripts/fromsy/sycontent.js" type="text/javascript"></script>
       <script type="text/javascript" charset="utf-8">
         $(document).ready(function(){
         sycontent('commontpl.js',
