Revert "[CHANGE] event sync"
This reverts commit feb4a45d2c2b1f575522f04106744b24ce5d8ef4.

--- a/public/index.html
+++ b/public/index.html
@@ -588,45 +588,21 @@
 
 
 
-					                <!-- event start -->
-					                  <dd class="col-date">Apr<br/><span>6-13</span></dd>
-					                  <dd class="col-data">
-					                    <span>Easter Vacation</span><br/><br/>
-					                  </dd>
-					                  <dd class="sptr-1"></dd><br/>
-					                <!-- event ends -->
+											<dd class="col-date">May<br><span>04</span></dd>
 
-					                <!-- event start -->
-					                  <dd class="col-date">May<br/><span>11</span></dd>
-					                  <dd class="col-data">
-					                    <span>Golf/Tennis Tournament</span><br/><br/>
-					                  </dd>
-					                  <dd class="sptr-1"></dd><br/>
-					                <!-- event ends -->
 
-					                <!-- event start -->
-					                  <dd class="col-date">May<br/><span>28</span></dd>
-					                  <dd class="col-data">
-					                    <span>Memorial Day Holiday – no school</span><br/><br/>
-					                  </dd>
-					                  <dd class="sptr-1"></dd><br/>
-					                <!-- event ends -->
+									<dd class="col-data">
 
-					                <!-- event start -->
-					                  <dd class="col-date">May<br/><span>31</span></dd>
-					                  <dd class="col-data">
-					                    <span>8th Grade Graduation</span><br/><br/>
-					                  </dd>
-					                  <dd class="sptr-1"></dd><br/>
-					                <!-- event ends -->
+											<span>Suzie Burger Fundraiser</span><br>
 
-					                <!-- event start -->
-					                  <dd class="col-date">Jun<br/><span>05</span></dd>
-					                  <dd class="col-data">
-					                    <span>Last Day of School – Dismissal at 11:00am</span><br/><br/>
-					                  </dd>
-					                  <dd class="sptr-1"></dd><br/>
-					                <!-- event ends -->
+
+											<p>Suzie Burger Fundraiser</p><br>
+
+
+
+									</dd>
+									<dd class="sptr-5"></dd>	
+
 
 							</dl>						</dd>
 						
