--- a/public/events.html
+++ b/public/events.html
@@ -182,7 +182,7 @@
         	<option value="2 Golfers">2 Golfers $310.00 USD</option>
         	<option value="3 Golfers">3 Golfers $465.00 USD</option>
         	<option value="Foursome">Foursome $620.00 USD</option>
-        	<option value="Couple Rate (2 golfers in a committed relationship)">Couple Rate (2 golfers in a committed relationship) $250.00 USD</option>
+        	<option value="Couple Rate">Couple Rate $250.00 USD</option>
         	<option value="Hole Sponsorship">Hole Sponsorship $100.00 USD</option>
         	<option value="Tennis">Tennis $100.00 USD</option>
         	<option value="Dinner Only">Dinner Only $25.00 USD</option>
