[Update] remove limit in news

--- a/public/index.html
+++ b/public/index.html
@@ -67,8 +67,7 @@
             params: {
               id: '2123',
               sort_by_field: "updated_at", 
-              order_by_value: "desc",
-              limit:4
+              order_by_value: "desc"
             }
           },
           {
