[Update] make changes at tuition Rates

--- a/public/about-us-3.html
+++ b/public/about-us-3.html
@@ -175,7 +175,7 @@
 					</tr>
 					
 				</table>
-				<h2>Tuition Grades K-8 ( 2011/2012 School Year )</h2>
+				<h2>Tuition Grades K-8 ( 2012/2013 School Year )</h2>
 				<table cellspacing="0" cellpadding="0" width="100%" border="0" class='datatable'>
 					<tr>
 						<th width="180">Grades K-8 </th>
@@ -184,26 +184,26 @@
 					</tr>
 					<tr>
 						<th>One Student </th>
-						<td>$5,470  </td>
-						<td>$4,380  </td>
+						<td>$5,700  </td>
+						<td>$4,600  </td>
 					</tr>
 					<tr>
 						<th>Two Students   </th>
-						<td>$9,840</td>
-						<td>$7,880</td>
+						<td>$10,550</td>
+						<td>$8,510</td>
 					</tr>
 					<tr>
 						<th>Three Students</th>
-						<td>$13,120</td>
-						<td>$10,510</td>
+						<td>$14,820</td>
+						<td>$11,960</td>
 					</tr>
 					<tr>
 						<th>Four or More Students </th>
-						<td>Free</td> 
-						<td>Free</td>
+						<td>$18,530</td> 
+						<td>$14,950</td>
 					</tr>
 				</table>
-				<p>$275 Registration Fee per Student              </p>
+				<p>$280 Registration Fee per Student              </p>
 				<h2>Extended Care Center</h2>
 				<table cellspacing="0" cellpadding="0" width="100%" border="0" class='datatable'>
 					<tr>
@@ -212,7 +212,7 @@
 					</tr>
 					<tr>
 						<th>Fees</th>
-						<td>Extension costs are on a per-child basis.  There are 3 plans to choose from.</td>
+						<td>Extension costs are on a per-child basis.  There are 3 plans to choose from. Registration Fee per Student - $125</td>
 					</tr>
 				</table>		
 					
