[Update] Remove call to action add fall is coming

--- a/public/index.html
+++ b/public/index.html
@@ -335,8 +335,11 @@
 					</dl>
 					
 				</div>
+        <!-- <div class="box1"  >
+                  <a href="events.html" ><img alt="" src="images/S_H_Tennis_Tournament.jpg" style="cursor:pointer;" /></a>
+                </div> -->
         <div class="box1"  >
-          <a href="events.html" ><img alt="" src="images/S_H_Tennis_Tournament.jpg" style="cursor:pointer;" /></a>
+          <a href="#" ><img alt="" src="images/fall-festival.jpg" style="cursor:pointer;" /></a>
         </div>
         
 				<div class="box1"  style="text-align:center; position:relative; height:70px; margin-bottom:20px; text-align:left; background: url('images/lbl-tour-tickets.png') center top no-repeat; border:1px solid #e6e6e6; width:297px; display:none;">
@@ -379,9 +382,6 @@
 			</div>
 			
 			<div class="col-299-r " >
-				<div class="box1"  >
-          <a href="events.html"  ><img alt="" src="images/S_H_Golf_Tournament.jpg" style="cursor:pointer;" /></a>
-        </div>
 				<div class="box1"><img alt="" src="images/wcea-wasc-logo.jpg" /></div>
 			</div>
 			<div class="sptr-1"></div>
